--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,12 +29,16 @@
             <div class="collapse navbar-collapse" id="navbar">
               <div class="navbar-nav">
                 <a class="nav-item nav-link" id="home" href="/">Home</a>
-                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                 <a class="nav-item nav-link" id="login" href="/login">Login</a>
                 <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
               </div>
             </div>
           </nav>
+
+          <div class="container">
+            {% block content %}
+            {% endblock %}
+          </div>
 
 
         <script
