--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,29 +1,56 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %}
 
 {% block content %}
-<form method="POST">
-    <h3 align="center">Login</h3>
-    <div class="form-group">
-      <label for="email">Email Address</label>
-      <input
-        type="email"
-        class="form-control"
-        id="email"
-        name="email"
-        placeholder="Enter email"
-      />
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password"
-        name="password"
-        placeholder="Enter password"
-      />
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+
+<style>
+  body {
+    background: radial-gradient(circle, #550da3, #1d0437);
+  }
+</style>
+
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+  <div class="row border rounded-5 p-3 bg-white shadow box-area" style= "width: 930px">
+
+      <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #103cbe;">
+          <div class="featured-image mb-3">
+          <img src="../static/images/ktplogo.png" class="img-fluid" style="width: 250px;">
+          </div>
+          <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">Be Verified</p>
+          <small class="text-white text-wrap text-center" style="width: 17rem;font-family: 'Courier New', Courier, monospace;">Join experienced Designers on this platform.</small>
+      </div>           
+      <div class="col-md-6 right-box" style="padding: 40px 30px 40px 40px;">
+        <div class="row align-items-center">
+              <div class="header-text mb-4">
+                    <h2>Hello,Again</h2>
+                    <p>We are happy to have you back.</p>
+              </div>
+              <div class="input-group mb-3">
+                  <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Email address">
+              </div>
+              <div class="input-group mb-1">
+                  <input type="password" class="form-control form-control-lg bg-light fs-6" placeholder="Password">
+              </div>
+              <div class="input-group mb-5 d-flex justify-content-between">
+                  <div class="form-check">
+                      <input type="checkbox" class="form-check-input" id="formCheck">
+                      <label for="formCheck" class="form-check-label text-secondary"><small>Remember Me</small></label>
+                  </div>
+                  <div class="forgot">
+                      <small><a href="#">Forgot Password?</a></small>
+                  </div>
+              </div>
+              <div class="input-group mb-3">
+                  <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
+              </div>
+              <div class="input-group mb-3">
+                  <button class="btn btn-lg btn-light w-100 fs-6"><img src="../static/images/google_logo.png" style="width:25px" class="img-fluid"><small>Sign In with Google</small></button>
+              </div>
+
+        </div>
+    </div> 
+  </div>
+</div>
+
+</form>
+
 {% endblock %}
