--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -4,25 +4,23 @@
 
 <style>
   body {
-    background: radial-gradient(circle, #550da3, #1d0437);
+    background: radial-gradient(circle, #eeeeee, #8fb5db);
   }
+
 </style>
 
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
-  <div class="row border rounded-5 p-3 bg-white shadow box-area" style= "width: 930px">
+  <div class="row border rounded-5 p-3 bg-white shadow box-area" style="width: 930px;">
 
-      <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #103cbe;">
+      <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #5c93ca;">
           <div class="featured-image mb-3">
           <img src="../static/images/ktplogo.png" class="img-fluid" style="width: 250px;">
           </div>
-          <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">Be Verified</p>
-          <small class="text-white text-wrap text-center" style="width: 17rem;font-family: 'Courier New', Courier, monospace;">Join experienced Designers on this platform.</small>
       </div>           
       <div class="col-md-6 right-box" style="padding: 40px 30px 40px 40px;">
         <div class="row align-items-center">
               <div class="header-text mb-4">
-                    <h2>Hello,Again</h2>
-                    <p>We are happy to have you back.</p>
+                    <h2>Sign in</h2>
               </div>
               <div class="input-group mb-3">
                   <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Email address">
