--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,27 +9,39 @@
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
             crossorigin="anonymous"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
         <title>{% block title %}Home{% endblock %}</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbar"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link" id="home" href="/">Home</a>
-                <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+        <style>
+            body {
+                font-family: 'Share Tech Mono', monospace;
+            }
+          
+          </style>
+        
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-body-tertiary">
+            <div class="container-fluid">
+              <span class="navbar-brand" style="font-family: 'Share Tech Mono', monospace;">KAPPA THETA PI</span>
+          
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+          
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item"><a class="nav-link" id="home" href="/">Home</a></li>
+                  <li class="nav-item"><a class="nav-link" id="login" href="/login">Login</a></li>
+                  <li class="nav-item"><a class="nav-link" id="signUp" href="/sign-up">Sign Up</a></li>
+                </ul>
               </div>
             </div>
           </nav>
-
+          
+          
+          
         {% with messages = get_flashed_messages(with_categories=true) %} {% if
         messages %} {% for category, message in messages %} {% if category ==
         'error' %}
