--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -41,7 +41,8 @@
                   <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
               </div>
               <div class="input-group mb-3">
-                  <button class="btn btn-lg btn-light w-100 fs-6"><img src="../static/images/google_logo.png" style="width:25px" class="img-fluid"><small>Sign In with Google</small></button>
+                  <a href='/home' class="btn btn-lg btn-light w-100 fs-6"><img src="../static/images/google_logo.png" style="width:25px" class="img-fluid"><small>Sign In with Google</small></a>
+                  
               </div>
 
         </div>
