--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -20,7 +20,7 @@
       <div class="col-md-6 right-box" style="padding: 40px 30px 40px 40px;">
         <div class="row align-items-center">
               <div class="header-text mb-4">
-                    <h2>Sign in</h2>
+                    <h2>Sign In</h2>
               </div>
               <div class="input-group mb-3">
                   <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Email address">
@@ -38,7 +38,7 @@
                   </div>
               </div>
               <div class="input-group mb-3">
-                  <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
+                  <button class="btn btn-lg btn-primary w-100 fs-6">Sign In</button>
               </div>
               <div class="input-group mb-3">
                   <a href='/authenticate' class="btn btn-lg btn-light w-100 fs-6"><img src="../static/images/google_logo.png" style="width:25px" class="img-fluid"><small>Sign In with Google</small></a>
