--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -59,7 +59,7 @@
             <button class="btn btn-lg btn-primary w-100 fs-6">Sign Up</button>
           </div>
           <div class="row">
-            <small>Alreeady have account? <a href="/login">Sign In</a></small>
+            <small>Already have account? <a href="/login">Sign In</a></small>
           </div>
       </div> 
     </div>
