--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -23,7 +23,7 @@
                     <h2>Sign In</h2>
               </div>
               <div class="input-group mb-3">
-                  <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Email address">
+                  <input type="text" class="form-control form-control-lg bg-light fs-6" placeholder="Email Address">
               </div>
               <div class="input-group mb-1">
                   <input type="password" class="form-control form-control-lg bg-light fs-6" placeholder="Password">
