--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8 /">
-        <meta name="viewport" content="width=device-width, initial-scale=1 /">
+        <meta charset="utf-8"></meta>
+        <meta name="viewport" content="width=device-width, initial-scale=1"></meta> 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link
             rel="stylesheet"
@@ -13,6 +13,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
         <title>{% block title %}Home{% endblock %}</title>
+        <!-- Bootstrap favicon class -->
+        <link rel="icon" href="website/static/images/fave.png" class="icon">
     </head>
     <body>
         <style>
@@ -41,7 +43,7 @@
         {% else %}
         <div class="alert alert-danger alter-dismissable fade show d-flex justify-content-between" role="alert">
             {{ message }}
-            <button style= type="button" aria-label="Close" class="btn-close" data-dismiss="alert">
+            <button type="button" aria-label="Close" class="btn-close" data-dismiss="alert">
             </button>
         </div>
         {% endif %} {% endfor %} {% endif %} {% endwith %}
